--- a/src/views/TournamentHub/FinalSeatingPlan/Hanchan/Hanchan.module.css
+++ b/src/views/TournamentHub/FinalSeatingPlan/Hanchan/Hanchan.module.css
@@ -1,4 +1,23 @@
+.hanchan
+{
+  position: relative;
+}
+
 .hilightedPlayer
 {
   background: yellow;
+}
+
+.clickable
+{
+  border-radius: 5px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.clickable:hover
+{
+  outline: 3px solid orange;
+  box-shadow: 0px 0px 10px yellow;
 }
