--- a/src/views/Print/PrintFullSchedule/PrintFullSchedule.module.css
+++ b/src/views/Print/PrintFullSchedule/PrintFullSchedule.module.css
@@ -1,6 +1,18 @@
 .fullSchedule
 {
-  font-size: 70%;
+  font-size: 50%;
   width: 297mm;
   height: 210mm;
+  border-collapse: collapse;
+}
+
+.round
+{
+  border-bottom: 1px solid black;
+}
+
+.cell
+{
+  margin-bottom: 1em;
+  padding-bottom: 1em;
 }
