--- a/src/views/TournamentHub/Standings/StandingsPopup/StandingsPopup.module.css
+++ b/src/views/TournamentHub/Standings/StandingsPopup/StandingsPopup.module.css
@@ -1,5 +1,19 @@
+.header, .note
+{
+  font-size: 200%;
+  font-weight: bold;
+  text-align: center;
+  margin: 20px 0;
+}
+
 .standingsPopup
 {
   display: flex;
   justify-content: space-around;
+}
+
+.splitStandings
+{
+  display: flex;
+  align-items: flex-start;
 }
