--- a/src/components/Hanchan/Hanchan.module.css
+++ b/src/components/Hanchan/Hanchan.module.css
@@ -1,6 +1,5 @@
 .hanchan
 {
-  padding: 0 10px;
   position: relative;
 }
 
@@ -25,6 +24,10 @@
 
 .clickable:hover
 {
-  outline: 3px solid orange;
-  box-shadow: 0px 0px 10px yellow;
+  box-shadow: 0px 0px 6px 1px rgba(0,0,0,0.5);
+}
+
+.clickable:active
+{
+  box-shadow: inset 0px 0px 6px 2px rgba(0,0,0,0.25);
 }
