--- a/src/views/TournamentHub/Ribbon/Ribbon.module.css
+++ b/src/views/TournamentHub/Ribbon/Ribbon.module.css
@@ -5,12 +5,31 @@
 
 .ribbonItem
 {
-  margin: 0 20px;
+  position: relative;
+  border: 1px solid rgb(184, 122, 141);
+  background: linear-gradient(0deg, rgba(255,170,195,1) 0%, rgba(252,168,255,1) 100%);
+  margin: 2px;
+  border-radius: 3px;
+}
+
+.ribbonItem:hover
+{
+  box-shadow: 0px 0px 6px 1px rgba(0,0,0,0.5);
+}
+
+.ribbonItem:active
+{
+  box-shadow: inset 0px 0px 6px 2px rgba(0,0,0,0.25);
 }
 
 .link
 {
-
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  display: block;
+  text-align: center;
+  padding: 10px 20px;
 }
 
 .enabled
