Make table scrollable if too wide. Change schedule to Overview.

--- a/src/views/TournamentHub/Ribbon/Ribbon.module.css
+++ b/src/views/TournamentHub/Ribbon/Ribbon.module.css
@@ -10,6 +10,7 @@
   background: linear-gradient(0deg, rgba(255,170,195,1) 0%, rgba(252,168,255,1) 100%);
   margin: 2px;
   border-radius: 3px;
+  flex-grow: 1;
 }
 
 .ribbonItem:hover
@@ -30,14 +31,5 @@
   display: block;
   text-align: center;
   padding: 10px 20px;
-}
-
-.enabled
-{
-
-}
-
-.disabled
-{
-
+  cursor: default;
 }
