--- a/src/components/TextInput/TextInput.module.css
+++ b/src/components/TextInput/TextInput.module.css
@@ -11,9 +11,10 @@
 	border-right-width: 0;
 	border-bottom-width: 1px;
 	border-left-width: 0;
-	width: 15em;
 	margin-bottom: 2px;
 	transition: border-bottom-width 0.2s, margin-bottom 0.2s;
+	width: 100%;
+	box-sizing: border-box;
 }
 
 .input:focus-visible
