Nameless score forms. Fix scoreform sorting issue.

--- a/src/views/Print/PrintScoreForms/HanchanScoreForm/HanchanScoreForm.module.css
+++ b/src/views/Print/PrintScoreForms/HanchanScoreForm/HanchanScoreForm.module.css
@@ -2,6 +2,7 @@
 {
 	table-layout: fixed;
 	width: 100%;
+	height: 25em;
 }
 
 .cell
@@ -9,4 +10,9 @@
 	border: 1px solid black;
 	border-radius: 2px;
 	height: 2em;
+}
+
+.nameCell
+{
+	padding-left: 1em;
 }
