--- a/src/views/Print/PrintScoreForms/HanchanScoreForm/HanchanScoreForm.module.css
+++ b/src/views/Print/PrintScoreForms/HanchanScoreForm/HanchanScoreForm.module.css
@@ -3,6 +3,13 @@
 	table-layout: fixed;
 	width: 100%;
 	height: 25em;
+	margin: 0;
+}
+
+.caption 
+{
+	font-weight: bold;
+	margin: 1em;
 }
 
 .cell
@@ -10,9 +17,16 @@
 	border: 1px solid black;
 	border-radius: 2px;
 	height: 2em;
+	width: auto;
 }
 
 .nameCell
 {
 	padding-left: 1em;
+}
+
+.windCell
+{
+	width: 2em;
+	font-size: 150%;
 }
